--- a/No3a/orbiting-boxes.html
+++ b/No3a/orbiting-boxes.html
@@ -43,7 +43,7 @@ void main() {
 
 	<script src="../Common/initShaders.js"></script>
 	<script type="text/javascript" src="../Common/MVnew.js"></script>
-	<script type="text/javascript" src="animate-3D.js"></script>
+	<script type="text/javascript" src="orbiting-boxes.js"></script>
 
 
 </head>
