Adjust styling, refactor

--- a/No1/spotthedifference.html
+++ b/No1/spotthedifference.html
@@ -133,6 +133,12 @@ main()
         </div>
       </div>
     </div>
+    <div class="row credit">
+      <div class="hint">
+        Made by Fathan Muhammad - 2006486090 & Razita Afrina Nuriyan - 2006529360
+			  for UTS Grafika Komputer Fasilkom UI 2022
+      </div>
+    </div>
   </div>
 </body>
 </html>
