--- a/No3b/orbiting-boxes.html
+++ b/No3b/orbiting-boxes.html
@@ -59,7 +59,7 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col">
+			<div class="col-7">
 				<canvas id="gl-canvas" width="600" height="600">
 					Oops ... your browser doesn't support the HTML5 canvas element
 				</canvas>
@@ -136,7 +136,7 @@
 					<div class="row credit">
 						Fathan Muhammad - 2006486090<br>
 						Razita Afrina Nuriyan - 2006529360<br>
-						UTS Grafika Komputer - Fasilkom UI 2022
+						UTS Grafika Komputer Fasilkom UI 2022
 					</div>
 				</div>
 				</div> 
